clib_packages/xforms/package/include/xforms_forms.h


typedef enum {
    FL_ON          = 1,
    FL_OK          = 1,
    FL_VALID       = 1,
    FL_PREEMPT     = 1,
    FL_AUTO        = 2,
    FL_WHEN_NEEDED = FL_AUTO,
    FL_OFF         = 0,
    FL_CANCEL      = 0,
    FL_INVALID     = 0,
    FL_IGNORE      = -1
}blablabla;
typedef int FL_Coord;
typedef unsigned long FL_COLOR;
typedef enum {
    FL_INVALID_CLASS,      
    FL_BUTTON,             
    FL_LIGHTBUTTON,        
    FL_ROUNDBUTTON,        
    FL_ROUND3DBUTTON,      
    FL_CHECKBUTTON,        
    FL_BITMAPBUTTON,       
    FL_PIXMAPBUTTON,       
    FL_BITMAP,             
    FL_PIXMAP,             
    FL_BOX,                
    FL_TEXT,               
    FL_MENU,               
    FL_CHART,              
    FL_CHOICE,             
    FL_COUNTER,            
    FL_SLIDER,             
    FL_VALSLIDER,          
    FL_INPUT,              
    FL_BROWSER,            
    FL_DIAL,               
    FL_TIMER,              
    FL_CLOCK,              
    FL_POSITIONER,         
    FL_FREE,               
    FL_XYPLOT,             
    FL_FRAME,              
    FL_LABELFRAME,         
    FL_CANVAS,             
    FL_GLCANVAS,           
    FL_TABFOLDER,          
    FL_SCROLLBAR,          
    FL_SCROLLBUTTON,       
    FL_MENUBAR,            
    FL_TEXTBOX,            
    FL_LABELBUTTON,        
    FL_COMBOBOX,           
    FL_IMAGECANVAS,        
    FL_THUMBWHEEL,         
    FL_COLORWHEEL,         
    FL_FORMBROWSER,        
    FL_SELECT,             
    FL_NMENU,              
    FL_SPINNER,            
    FL_TBOX,               
    FL_CLASS_END           
} FL_CLASS;
typedef enum {
    FL_FULLBORDER = 1,      
    FL_TRANSIENT,           
    FL_NOBORDER             
 }blablabla;
typedef enum {
    FL_NO_BOX,                
    FL_UP_BOX,                
    FL_DOWN_BOX,              
    FL_BORDER_BOX,            
    FL_SHADOW_BOX,            
    FL_FRAME_BOX,             
    FL_ROUNDED_BOX,           
    FL_EMBOSSED_BOX,          
    FL_FLAT_BOX,              
    FL_RFLAT_BOX,             
    FL_RSHADOW_BOX,           
    FL_OVAL_BOX,              
    FL_ROUNDED3D_UPBOX,       
    FL_ROUNDED3D_DOWNBOX,     
    FL_OVAL3D_UPBOX,          
    FL_OVAL3D_DOWNBOX,        
    FL_OVAL3D_FRAMEBOX,       
    FL_OVAL3D_EMBOSSEDBOX,    
    FL_TOPTAB_UPBOX,
    FL_SELECTED_TOPTAB_UPBOX,
    FL_BOTTOMTAB_UPBOX,
    FL_SELECTED_BOTTOMTAB_UPBOX,
    FL_MAX_BOX_STYLES               
} FL_BOX_TYPE;
typedef enum {
	FL_ALIGN_CENTER,
    FL_ALIGN_TOP          = 1,
    FL_ALIGN_BOTTOM       = 2,
    FL_ALIGN_LEFT         = 4,
    FL_ALIGN_RIGHT        = 8,
    FL_ALIGN_LEFT_TOP     = ( FL_ALIGN_TOP    | FL_ALIGN_LEFT  ),
    FL_ALIGN_RIGHT_TOP    = ( FL_ALIGN_TOP    | FL_ALIGN_RIGHT ),
    FL_ALIGN_LEFT_BOTTOM  = ( FL_ALIGN_BOTTOM | FL_ALIGN_LEFT  ),
    FL_ALIGN_RIGHT_BOTTOM = ( FL_ALIGN_BOTTOM | FL_ALIGN_RIGHT ),
    FL_ALIGN_INSIDE       = ( 1 << 13 ),
    FL_ALIGN_VERT         = ( 1 << 14 ),    
    FL_ALIGN_TOP_LEFT     = FL_ALIGN_LEFT_TOP,
    FL_ALIGN_TOP_RIGHT    = FL_ALIGN_RIGHT_TOP,
    FL_ALIGN_BOTTOM_LEFT  = FL_ALIGN_LEFT_BOTTOM,
    FL_ALIGN_BOTTOM_RIGHT = FL_ALIGN_RIGHT_BOTTOM
} FL_ALIGN;
typedef enum {
    FL_MBUTTON1 = 1,
    FL_MBUTTON2,
    FL_MBUTTON3,
    FL_MBUTTON4,
    FL_MBUTTON5
}blablabla;
typedef enum {
    FL_BLACK,
	FL_RED,
	FL_GREEN,
	FL_YELLOW,
    FL_BLUE,
	FL_MAGENTA,
	FL_CYAN,
	FL_WHITE,
    FL_TOMATO,
	FL_INDIANRED,
	FL_SLATEBLUE,
    FL_COL1,
	FL_RIGHT_BCOL,
	FL_BOTTOM_BCOL,
	FL_TOP_BCOL,
	FL_LEFT_BCOL,
    FL_MCOL,
    FL_INACTIVE,
	FL_PALEGREEN,
	FL_DARKGOLD,
    FL_ORCHID,
	FL_DARKCYAN,
	FL_DARKTOMATO,
	FL_WHEAT,
	FL_DARKORANGE,
    FL_DEEPPINK,
	FL_CHARTREUSE,
	FL_DARKVIOLET,
	FL_SPRINGGREEN,
    FL_DODGERBLUE,
	FL_LIGHTER_COL1,
	FL_DARKER_COL1,
	FL_ALICEBLUE,
	FL_ANTIQUEWHITE,
	FL_AQUA,
	FL_AQUAMARINE,
	FL_AZURE,
	FL_BEIGE,
	FL_BISQUE,
	FL_BLANCHEDALMOND,
	FL_BLUEVIOLET,
	FL_BROWN,
	FL_BURLYWOOD,
	FL_CADETBLUE,
	FL_CHOCOLATE,
	FL_CORAL,
	FL_CORNFLOWERBLUE,
	FL_CORNSILK,
	FL_CRIMSON,
	FL_DARKBLUE,
	FL_DARKGOLDENROD,
	FL_DARKGRAY,
	FL_DARKGREEN,
	FL_DARKGREY,
	FL_DARKKHAKI,
	FL_DARKMAGENTA,
	FL_DARKOLIVEGREEN,
	FL_DARKORCHID,
	FL_DARKRED,
	FL_DARKSALMON,
	FL_DARKSEAGREEN,
	FL_DARKSLATEBLUE,
	FL_DARKSLATEGRAY,
	FL_DARKSLATEGREY,
	FL_DARKTURQUOISE,
	FL_DEEPSKYBLUE,
	FL_DIMGRAY,
	FL_DIMGREY,
	FL_FIREBRICK,
	FL_FLORALWHITE,
	FL_FORESTGREEN,
	FL_FUCHSIA,
	FL_GAINSBORO,
	FL_GHOSTWHITE,
	FL_GOLD,
	FL_GOLDENROD,
	FL_GRAY,
	FL_GREENYELLOW,
	FL_GREY,
	FL_HONEYDEW,
	FL_HOTPINK,
	FL_INDIGO,
	FL_IVORY,
	FL_KHAKI,
	FL_LAVENDER,
	FL_LAVENDERBLUSH,
	FL_LAWNGREEN,
	FL_LEMONCHIFFON,
	FL_LIGHTBLUE,
	FL_LIGHTCORAL,
	FL_LIGHTCYAN,
	FL_LIGHTGOLDENRODYELLOW,
	FL_LIGHTGRAY,
	FL_LIGHTGREEN,
	FL_LIGHTGREY,
	FL_LIGHTPINK,
	FL_LIGHTSALMON,
	FL_LIGHTSEAGREEN,
	FL_LIGHTSKYBLUE,
	FL_LIGHTSLATEGRAY,
	FL_LIGHTSLATEGREY,
	FL_LIGHTSTEELBLUE,
	FL_LIGHTYELLOW,
	FL_LIME,
	FL_LIMEGREEN,
	FL_LINEN,
	FL_MAROON,
	FL_MEDIUMAQUAMARINE,
	FL_MEDIUMBLUE,
	FL_MEDIUMORCHID,
	FL_MEDIUMPURPLE,
	FL_MEDIUMSEAGREEN,
	FL_MEDIUMSLATEBLUE,
	FL_MEDIUMSPRINGGREEN,
	FL_MEDIUMTURQUOISE,
	FL_MEDIUMVIOLETRED,
	FL_MIDNIGHTBLUE,
	FL_MINTCREAM,
	FL_MISTYROSE,
	FL_MOCCASIN,
	FL_NAVAJOWHITE,
	FL_NAVY,
	FL_OLDLACE,
	FL_OLIVE,
	FL_OLIVEDRAB,
	FL_ORANGE,
	FL_ORANGERED,
	FL_PALEGOLDENROD,
	FL_PALETURQUOISE,
	FL_PALEVIOLETRED,
	FL_PAPAYAWHIP,
	FL_PEACHPUFF,
	FL_PERU,
	FL_PINK,
	FL_PLUM,
	FL_POWDERBLUE,
	FL_PURPLE,
	FL_ROSYBROWN,
	FL_ROYALBLUE,
	FL_SADDLEBROWN,
	FL_SALMON,
	FL_SANDYBROWN,
	FL_SEAGREEN,
	FL_SEASHELL,
	FL_SIENNA,
	FL_SILVER,
	FL_SKYBLUE,
	FL_SLATEGRAY,
	FL_SLATEGREY,
	FL_SNOW,
	FL_STEELBLUE,
	FL_TAN,
	FL_TEAL,
	FL_THISTLE,
	FL_TURQUOISE,
	FL_VIOLET,
	FL_WHITESMOKE,
	FL_YELLOWGREEN,
    FL_COLOR_CHOOSER_COLOR,
    FL_FREE_COL1,
    FL_FREE_COL2,
    FL_FREE_COL3,
    FL_FREE_COL4,
    FL_FREE_COL5,
    FL_FREE_COL6,
    FL_FREE_COL7,
    FL_FREE_COL8,
    FL_FREE_COL9,
    FL_FREE_COL10,
    FL_FREE_COL11,
    FL_FREE_COL12,
    FL_FREE_COL13,
    FL_FREE_COL14,
    FL_FREE_COL15,
    FL_FREE_COL16,
    FL_NOCOLOR = INT_MAX
} FL_PD_COL;
#define FL_LCOL             FL_BLACK
typedef enum {
    FL_PUP_NONE,
    FL_PUP_GREY  = 1,
    FL_PUP_BOX   = 2,
    FL_PUP_CHECK = 4,
    FL_PUP_RADIO = 8
}blablabla;
typedef int ( * FL_PUP_CB )( int );        
typedef struct {
    const char * text;           
    FL_PUP_CB    callback;       
    const char * shortcut;       
    int          mode;           
} FL_PUP_ENTRY;
typedef struct FL_FORM_    FL_FORM;
typedef struct FL_OBJECT_  FL_OBJECT;
typedef enum {
  FL_BEING_HIDDEN = -1,
  FL_HIDDEN       = 0,
  FL_INVISIBLE    = FL_HIDDEN,
  FL_VISIBLE      = 1
}blablabla;
typedef enum {
    FL_READ   = 1,
    FL_WRITE  = 2,
    FL_EXCEPT = 4
}blablabla;
typedef enum {
	FL_INPUT_END_EVENT_CLASSIC = 0,
	FL_INPUT_END_EVENT_ALWAYS  = 1
}blablabla;
extern void fl_for_all_objects( FL_FORM * form,
                                   int       ( * cb )( FL_OBJECT *, void * ),
                                   void    * v );
typedef enum {
    FL_XOR  = GXxor,
    FL_COPY = GXcopy,
    FL_AND  = GXand
}blablabla;
typedef enum {
    FL_IllegalVisual = -1,
    FL_StaticGray    = StaticGray,
    FL_GrayScale     = GrayScale,
    FL_StaticColor   = StaticColor,
    FL_PseudoColor   = PseudoColor,
    FL_TrueColor     = TrueColor,
    FL_DirectColor   = DirectColor,
    FL_DefaultVisual = 10         
}blablabla;
typedef enum {
    FL_North         = NorthGravity,
    FL_NorthEast     = NorthEastGravity,
    FL_NorthWest     = NorthWestGravity,
    FL_South         = SouthGravity,
    FL_SouthEast     = SouthEastGravity,
    FL_SouthWest     = SouthWestGravity,
    FL_East          = EastGravity,
    FL_West          = WestGravity,
    FL_NoGravity     = ForgetGravity,
    FL_ForgetGravity = ForgetGravity
}blablabla;
typedef enum {
    FL_SOLID          = LineSolid,
    FL_USERDASH       = LineOnOffDash,
    FL_USERDOUBLEDASH = LineDoubleDash,
    FL_DOT,
    FL_DOTDASH,
    FL_DASH,
    FL_LONGDASH
}blablabla;
typedef enum {
    FL_PDDepth           = ( 1 <<  1 ),
    FL_PDClass           = ( 1 <<  2 ),
    FL_PDDouble          = ( 1 <<  3 ),
    FL_PDSync            = ( 1 <<  4 ),
    FL_PDPrivateMap      = ( 1 <<  5 ),
    FL_PDScrollbarType   = ( 1 <<  6 ),
    FL_PDPupFontSize     = ( 1 <<  7 ),
    FL_PDButtonFontSize  = ( 1 <<  8 ),
    FL_PDInputFontSize   = ( 1 <<  9 ),
    FL_PDSliderFontSize  = ( 1 << 10 ),
    FL_PDVisual          = ( 1 << 11 ),
    FL_PDULThickness     = ( 1 << 12 ),
    FL_PDULPropWidth     = ( 1 << 13 ),
    FL_PDBS              = ( 1 << 14 ),
    FL_PDCoordUnit       = ( 1 << 15 ),
    FL_PDDebug           = ( 1 << 16 ),
    FL_PDSharedMap       = ( 1 << 17 ),
    FL_PDStandardMap     = ( 1 << 18 ),
    FL_PDBorderWidth     = ( 1 << 19 ),
    FL_PDSafe            = ( 1 << 20 ),
    FL_PDMenuFontSize    = ( 1 << 21 ),
    FL_PDBrowserFontSize = ( 1 << 22 ),
    FL_PDChoiceFontSize  = ( 1 << 23 ),
    FL_PDLabelFontSize   = ( 1 << 24 )
}blablabla;
typedef enum {
    FL_POPUP_NORMAL_SELECT,
    FL_POPUP_DRAG_SELECT
}blablabla;
typedef enum {
    FL_POPUP_NONE     = 0,
    FL_POPUP_DISABLED = 1,               
    FL_POPUP_HIDDEN   = 2,               
    FL_POPUP_CHECKED  = 4                
}blablabla;
typedef enum {
    FL_POPUP_NORMAL,                     
    FL_POPUP_TOGGLE,                     
    FL_POPUP_RADIO,                      
    FL_POPUP_SUB,                        
    FL_POPUP_LINE                        
}blablabla;
typedef enum {
    FL_POPUP_BACKGROUND_COLOR,
    FL_POPUP_HIGHLIGHT_COLOR,
    FL_POPUP_TITLE_COLOR,
    FL_POPUP_TEXT_COLOR,
    FL_POPUP_HIGHLIGHT_TEXT_COLOR,
    FL_POPUP_DISABLED_TEXT_COLOR,
    FL_POPUP_RADIO_COLOR
}blablabla;
typedef enum {
    FL_ANALOG_CLOCK,
    FL_DIGITAL_CLOCK
}blablabla;
typedef enum {
    FL_INVISIBLE_CURSOR = -2,
    FL_DEFAULT_CURSOR   = -1,
    FL_BUSY_CURSOR      = XC_watch,
    FL_CROSSHAIR_CURSOR = XC_tcross,
    FL_KILL_CURSOR      = XC_pirate,
    FL_NWARROW_CURSOR   = XC_top_left_arrow,
    FL_NEARROW_CURSOR   = XC_arrow
}blablabla;
typedef enum {
    FL_DIAL_CW,
    FL_DIAL_CCW
}blablabla;
typedef enum {
    FT_FILE,
    FT_DIR,
    FT_LINK,
    FT_SOCK,
    FT_FIFO,
    FT_BLK,
    FT_CHR,
    FT_OTHER
}blablabla;
typedef enum {
    FL_ALPHASORT = 1,       
    FL_RALPHASORT,          
    FL_MTIMESORT,           
    FL_RMTIMESORT,          
    FL_SIZESORT,            
    FL_RSIZESORT,           
    FL_CASEALPHASORT,       
    FL_RCASEALPHASORT       
}blablabla;
typedef enum {
   FLPS_AUTO,                  
   FLPS_LANDSCAPE,             
   FLPS_PORTRAIT,              
   FLPS_BESTFIT                
}blablabla;
typedef enum {
  FLPS_BW = -1,
  FLPS_GRAYSCALE,
  FLPS_COLOR
}blablabla;
typedef enum {
    FL_NORMAL_FORMBROWSER
}blablabla;
typedef enum {
   FL_SMOOTH_SCROLL,
   FL_JUMP_SCROLL
}blablabla;
typedef enum {
    FL_NO_FRAME,
    FL_UP_FRAME,
    FL_DOWN_FRAME,
    FL_BORDER_FRAME,
    FL_SHADOW_FRAME,
    FL_ENGRAVED_FRAME,
    FL_ROUNDED_FRAME,
    FL_EMBOSSED_FRAME,
    FL_OVAL_FRAME
}blablabla;
typedef enum {
    FL_INPUT_MMDD,
    FL_INPUT_DDMM
}blablabla;
typedef enum {
    FL_NORMAL_INPUT_MODE,
    FL_DOS_INPUT_MODE
}blablabla;
typedef enum {
    FL_NORMAL_NMENU,
    FL_NORMAL_TOUCH_NMENU,
    FL_BUTTON_NMENU,
    FL_BUTTON_TOUCH_NMENU
}blablabla;
typedef enum {
    FL_VERT_SCROLLBAR,
    FL_HOR_SCROLLBAR,
    FL_VERT_THIN_SCROLLBAR,
    FL_HOR_THIN_SCROLLBAR,
    FL_VERT_NICE_SCROLLBAR,
    FL_HOR_NICE_SCROLLBAR,
    FL_VERT_PLAIN_SCROLLBAR,
    FL_HOR_PLAIN_SCROLLBAR,
    FL_HOR_BASIC_SCROLLBAR  = FL_HOR_PLAIN_SCROLLBAR,
    FL_VERT_BASIC_SCROLLBAR = FL_VERT_PLAIN_SCROLLBAR
}blablabla;
typedef enum {
	FL_NORMAL_SCROLLBAR,
	FL_THIN_SCROLLBAR,
	FL_NICE_SCROLLBAR,
	FL_PLAIN_SCROLLBAR
}blablabla;
typedef enum {
    FL_NORMAL_SELECT,
    FL_MENU_SELECT,
    FL_DROPLIST_SELECT
}blablabla;
typedef enum {
    FL_TOP_TABFOLDER,       
    FL_BOTTOM_TABFOLDER,
    FL_LEFT_TABFOLDER,
    FL_RIGHT_TABFOLDER,
    FL_NORMAL_TABFOLDER = FL_TOP_TABFOLDER
}blablabla;
typedef enum {
    FL_NO,
    FL_FIT,
    FL_ENLARGE_ONLY
}blablabla;
typedef enum {
    FL_NORMAL_TEXT
}blablabla;
typedef enum {
    FL_VERT_THUMBWHEEL,
    FL_HOR_THUMBWHEEL
}blablabla;
#define FL_XPOPUP_H
#define FL_MAXPUPI     128  
#define FL_PUP_PADH    4    
typedef void ( * FL_PUP_ENTERCB )( int, void * );   
typedef void ( * FL_PUP_LEAVECB )( int, void * );   
extern int fl_setpup_entries( int            nm,
                                 FL_PUP_ENTRY * entries );
extern int fl_newpup( Window win );
extern int fl_defpup( Window       win,
                         const char * str,
                         ... );
extern int fl_addtopup( int          n,
                           const char * str,
                           ... );
extern int fl_setpup_mode( int          nm,
                              int          ni,
                              unsigned int mode );
extern void fl_freepup( int n );
extern int fl_dopup( int n );
extern Cursor fl_setpup_default_cursor( int cursor );
extern void fl_setpup_default_color( FL_COLOR fg,
										FL_COLOR bg );
extern void fl_setpup_default_pup_checked_color( FL_COLOR col );
extern int fl_setpup_default_fontsize( int size );
extern int fl_setpup_default_fontstyle( int style );
#define fl_setpup_fontsize            fl_setpup_default_fontsize    
#define fl_setpup_fontstyle           fl_setpup_default_fontstyle   
#define fl_setpup_color               fl_setpup_default_color       
#define fl_setpup_default_checkcolor  fl_setpup_default_pup_checked_color
#define fl_setpup_checkcolor          fl_setpup_default_pup_checked_color
extern int fl_setpup_default_bw( int bw );
extern void fl_setpup_shortcut( int          nm,
                                   int          ni,
                                   const char * sc );
extern void fl_setpup_position( int x,
                                   int y );
extern void fl_setpup_align_bottom( void );
extern void fl_setpup_selection( int nm,
                                    int ni );
extern void fl_setpup_shadow( int n,
                                 int y );
extern void fl_setpup_softedge( int n,
                                   int y );
extern void fl_setpup_bw( int n,
                             int bw );
extern void fl_setpup_title( int          nm,
                                const char * title );
extern void fl_setpup_title_f( int          nm,
								  const char * fmt,
								  ... );
extern FL_PUP_ENTERCB fl_setpup_entercb( int              nm,
                                            FL_PUP_ENTERCB   cb,
                                            void           * data );
extern FL_PUP_LEAVECB fl_setpup_leavecb( int              nm,
                                            FL_PUP_LEAVECB   cb,
                                            void           * data );
extern void fl_setpup_pad( int n,
                              int padw,
                              int padh );
extern Cursor fl_setpup_cursor( int nm,
                                   int cursor );
extern int fl_setpup_maxpup( int n );
extern unsigned int fl_getpup_mode( int nm,
                                       int ni );
extern const char * fl_getpup_text( int nm,
                                       int ni );
extern void fl_showpup( int n );
extern void fl_hidepup( int n );
extern int fl_getpup_items( int n );
extern int fl_current_pup( void );
#define fl_setpup_hotkey    fl_setpup_shortcut
extern FL_PUP_CB fl_setpup_itemcb( int        nm,
                                      int       ni,
                                      FL_PUP_CB cb );
extern FL_PUP_CB fl_setpup_menucb( int       nm,
                                      FL_PUP_CB cb );
extern void fl_setpup_submenu( int m,
                                  int i,
                                  int subm );
#define fl_setpup    fl_setpup_mode
#define FL_XYPLOT_H
typedef enum {
    FL_NORMAL_XYPLOT,       
    FL_SQUARE_XYPLOT,       
    FL_CIRCLE_XYPLOT,       
    FL_FILL_XYPLOT,         
    FL_POINTS_XYPLOT,       
    FL_DASHED_XYPLOT,       
    FL_IMPULSE_XYPLOT,
    FL_ACTIVE_XYPLOT,       
    FL_EMPTY_XYPLOT,
    FL_DOTTED_XYPLOT,
    FL_DOTDASHED_XYPLOT,
    FL_LONGDASHED_XYPLOT,
    FL_LINEPOINTS_XYPLOT    
} FL_XYPLOT_TYPE;
typedef enum {
    FL_LINEAR,
    FL_LOG
}blablabla;
typedef enum {
    FL_GRID_NONE  = 0,
    FL_GRID_MAJOR = 1,
    FL_GRID_MINOR = 2
}blablabla;
#define FL_XYPLOT_BOXTYPE       FL_FLAT_BOX
#define FL_XYPLOT_COL1          FL_COL1
#define FL_XYPLOT_LCOL          FL_LCOL
#define FL_XYPLOT_ALIGN         FL_ALIGN_BOTTOM
#define FL_MAX_XYPLOTOVERLAY    32
extern FL_OBJECT * fl_create_xyplot( int          t,
                                        FL_Coord     x,
                                        FL_Coord     y,
                                        FL_Coord     w,
                                        FL_Coord     h,
                                        const char * label );
extern FL_OBJECT * fl_add_xyplot( int          t,
                                     FL_Coord     x,
                                     FL_Coord     y,
                                     FL_Coord     w,
                                     FL_Coord     h,
                                     const char * label );
extern void fl_set_xyplot_data( FL_OBJECT  * ob,
                                   float      * x,
                                   float      * y,
                                   int          n,
                                   const char * title,
                                   const char * xlabel,
                                   const char * ylabel );
extern void fl_set_xyplot_data_double( FL_OBJECT  * ob,
                                          double     * x,
                                          double     * y,
                                          int          n,
                                          const char * title,
                                          const char * xlabel,
                                          const char * ylabel );
extern int fl_set_xyplot_file( FL_OBJECT  * ob,
                                  const char * f,
                                  const char * title,
                                  const char * xl,
                                  const char * yl );
extern void fl_insert_xyplot_data( FL_OBJECT * ob,
                                      int         id,
                                      int         n,
                                      double      x,
                                      double      y );
#define fl_set_xyplot_datafile   fl_set_xyplot_file