xforms/package/xforms_forms.pas


const
  FL_MAXPUPI = 128;
  { space between each items  }
  FL_PUP_PADH = 4;

type

  TFL_PUP_ENTERCB = procedure(para1: cint; para2: pointer); cdecl;
  { call back prototype   }

  TFL_PUP_LEAVECB = procedure(para1: cint; para2: pointer); cdecl;

  { call back prototype   }

function fl_setpup_entries(nm: cint; entries: PFL_PUP_ENTRY): cint; cdecl; external;
function fl_newpup(win: TWindow): cint; cdecl; external;
(* Const before type ignored *)
function fl_defpup(win: TWindow; str: PChar; args: array of const): cint; cdecl; external;
function fl_defpup(win: TWindow; str: PChar): cint; cdecl; external;
(* Const before type ignored *)
function fl_addtopup(n: cint; str: PChar; args: array of const): cint; cdecl; external;
function fl_addtopup(n: cint; str: PChar): cint; cdecl; external;
function fl_setpup_mode(nm: cint; ni: cint; mode: cuint): cint; cdecl; external;
procedure fl_freepup(n: cint); cdecl; external;
function fl_dopup(n: cint): cint; cdecl; external;
function fl_setpup_default_cursor(cursor: cint): TCursor; cdecl; external;
procedure fl_setpup_default_color(fg: TFL_COLOR; bg: TFL_COLOR); cdecl; external;
procedure fl_setpup_default_pup_checked_color(col: TFL_COLOR); cdecl; external;
function fl_setpup_default_fontsize(size: cint): cint; cdecl; external;
function fl_setpup_default_fontstyle(style: cint): cint; cdecl; external;
//const
//  fl_setpup_fontsize = fl_setpup_default_fontsize;  
//  fl_setpup_fontstyle = fl_setpup_default_fontstyle;  
//  fl_setpup_color = fl_setpup_default_color;  
//  fl_setpup_default_checkcolor = fl_setpup_default_pup_checked_color;  
//  fl_setpup_checkcolor = fl_setpup_default_pup_checked_color;  
function fl_setpup_fontsize(size: cint): cint; cdecl; external Name 'fl_setpup_default_fontsize';
function fl_setpup_fontstyle(style: cint): cint; cdecl; external Name 'fl_setpup_default_fontstyle';
procedure fl_setpup_color(fg: TFL_COLOR; bg: TFL_COLOR); cdecl; external Name 'fl_setpup_default_color';
procedure fl_setpup_default_checkcolor(col: TFL_COLOR); cdecl; external Name 'fl_setpup_default_pup_checked_color';
procedure fl_setpup_checkcolor(col: TFL_COLOR); cdecl; external Name 'fl_setpup_default_pup_checked_color';

function fl_setpup_default_bw(bw: cint): cint; cdecl; external;
(* Const before type ignored *)
procedure fl_setpup_shortcut(nm: cint; ni: cint; sc: PChar); cdecl; external;
procedure fl_setpup_position(x: cint; y: cint); cdecl; external;
procedure fl_setpup_align_bottom; cdecl; external;
procedure fl_setpup_selection(nm: cint; ni: cint); cdecl; external;
procedure fl_setpup_shadow(n: cint; y: cint); cdecl; external;
procedure fl_setpup_softedge(n: cint; y: cint); cdecl; external;
procedure fl_setpup_bw(n: cint; bw: cint); cdecl; external;
(* Const before type ignored *)
procedure fl_setpup_title(nm: cint; title: PChar); cdecl; external;
(* Const before type ignored *)
procedure fl_setpup_title_f(nm: cint; fmt: PChar; args: array of const); cdecl; external;
procedure fl_setpup_title_f(nm: cint; fmt: PChar); cdecl; external;
function fl_setpup_entercb(nm: cint; cb: TFL_PUP_ENTERCB; Data: pointer): TFL_PUP_ENTERCB; cdecl; external;
function fl_setpup_leavecb(nm: cint; cb: TFL_PUP_LEAVECB; Data: pointer): TFL_PUP_LEAVECB; cdecl; external;
procedure fl_setpup_pad(n: cint; padw: cint; padh: cint); cdecl; external;
function fl_setpup_cursor(nm: cint; cursor: cint): TCursor; cdecl; external;
function fl_setpup_maxpup(n: cint): cint; cdecl; external;
function fl_getpup_mode(nm: cint; ni: cint): cuint; cdecl; external;
(* Const before type ignored *)
function fl_getpup_text(nm: cint; ni: cint): PChar; cdecl; external;
procedure fl_showpup(n: cint); cdecl; external;
procedure fl_hidepup(n: cint); cdecl; external;
function fl_getpup_items(n: cint): cint; cdecl; external;
function fl_current_pup: cint; cdecl; external;
//const
//  fl_setpup_hotkey = fl_setpup_shortcut;  
procedure fl_setpup_hotkey(nm: cint; ni: cint; sc: PChar); cdecl; external Name 'fl_setpup_shortcut';

function fl_setpup_itemcb(nm: cint; ni: cint; cb: TFL_PUP_CB): TFL_PUP_CB; cdecl; external;
function fl_setpup_menucb(nm: cint; cb: TFL_PUP_CB): TFL_PUP_CB; cdecl; external;
procedure fl_setpup_submenu(m: cint; i: cint; subm: cint); cdecl; external;
//const
//  fl_setpup = fl_setpup_mode;  
function fl_setpup(nm: cint; ni: cint; mode: cuint): cint; cdecl; external Name 'fl_setpup_mode';
//{$endif}
{ ! defined FL_XPOPUP_H  }
{*
 * \file xyplot.h
  }
//{$ifndef FL_XYPLOT_H}
//{$define FL_XYPLOT_H}
{  Class FL_XYPLOT  }
{ solid line                         }
{ with added square                  }
{ with added circle                  }
{ fill completely                    }
{ only data points                   }
{ dashed line                        }
{ accepts interactive manipulations  }
{ line & points                      }
type
  PFL_XYPLOT_TYPE = ^TFL_XYPLOT_TYPE;
  TFL_XYPLOT_TYPE = cint;

const
  FL_NORMAL_XYPLOT = 0;
  FL_SQUARE_XYPLOT = 1;
  FL_CIRCLE_XYPLOT = 2;
  FL_FILL_XYPLOT = 3;
  FL_POINTS_XYPLOT = 4;
  FL_DASHED_XYPLOT = 5;
  FL_IMPULSE_XYPLOT = 6;
  FL_ACTIVE_XYPLOT = 7;
  FL_EMPTY_XYPLOT = 8;
  FL_DOTTED_XYPLOT = 9;
  FL_DOTDASHED_XYPLOT = 10;
  FL_LONGDASHED_XYPLOT = 11;
  FL_LINEPOINTS_XYPLOT = 12;

const
  FL_LINEAR = 0;
  FL_LOG = 1;

const
  FL_GRID_NONE = 0;
  FL_GRID_MAJOR = 1;
  FL_GRID_MINOR = 2;

  {**** Defaults **** }
  FL_XYPLOT_BOXTYPE = FL_FLAT_BOX;
  FL_XYPLOT_COL1 = FL_COL1;
  FL_XYPLOT_LCOL = FL_LCOL;
  FL_XYPLOT_ALIGN = FL_ALIGN_BOTTOM;
  FL_MAX_XYPLOTOVERLAY = 32;

  {**** Others   **** }
  (* Const before type ignored *)

function fl_create_xyplot(t: cint; x: TFL_Coord; y: TFL_Coord; w: TFL_Coord; h: TFL_Coord;
  _label: PChar): PFL_OBJECT; cdecl; external;
(* Const before type ignored *)
function fl_add_xyplot(t: cint; x: TFL_Coord; y: TFL_Coord; w: TFL_Coord; h: TFL_Coord;
  _label: PChar): PFL_OBJECT; cdecl; external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
procedure fl_set_xyplot_data(ob: PFL_OBJECT; x: Psingle; y: Psingle; n: cint; title: PChar;
  xlabel: PChar; ylabel: PChar); cdecl; external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
procedure fl_set_xyplot_data_double(ob: PFL_OBJECT; x: Pdouble; y: Pdouble; n: cint; title: PChar;
  xlabel: PChar; ylabel: PChar); cdecl; external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function fl_set_xyplot_file(ob: PFL_OBJECT; f: PChar; title: PChar; xl: PChar; yl: PChar): cint; cdecl; external;
procedure fl_insert_xyplot_data(ob: PFL_OBJECT; id: cint; n: cint; x: cdouble; y: cdouble); cdecl; external;
//const
//  fl_set_xyplot_datafile = fl_set_xyplot_file;  
function fl_set_xyplot_datafile(ob: PFL_OBJECT; f: PChar; title: PChar; xl: PChar; yl: PChar): cint; cdecl; external Name 'fl_set_xyplot_file';
(* Const before type ignored *)
